BeautifulSoup find, find_all, select

--- a/lab_ml/bs1.ipynb
+++ b/lab_ml/bs1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1D2u0-zocswTm-FFsPIxlNhTUiZ9HHRzp",
-      "authorship_tag": "ABX9TyNTy5odtu2821bQAd95eIqQ",
+      "authorship_tag": "ABX9TyO2ZQAck8cFVrnX9gDGu67h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,12 +44,12 @@
       "metadata": {
         "id": "rrAzKPkSd6te"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "QinVBaQTcoBL"
       },
@@ -97,7 +97,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s1_tI7BFfNUO",
-        "outputId": "b0fce0c5-701f-4667-a44f-b6efde36a1c2"
+        "outputId": "2e95c76d-92eb-4d7b-fe24-6662c1ed79c0"
       },
       "execution_count": 5,
       "outputs": [
@@ -121,9 +121,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZwCY3WjMgVm-",
-        "outputId": "b91261bc-2ea7-486f-ffb3-c4db36a8ec00"
+        "outputId": "8ea7fff0-f2b5-4ac9-80d5-b22cfe2d9df8"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,9 +145,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jrxA5FqZiSqh",
-        "outputId": "431e0142-ae9b-401a-e806-f9df5392f2d1"
+        "outputId": "816474aa-da36-4803-d120-4335342ecb8f"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,9 +175,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PGoOZBuzgxuG",
-        "outputId": "0704451e-273c-4680-9868-9c0b054824e3"
+        "outputId": "abf70ac4-80c2-4fa9-b1ba-ac38bf6b88aa"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +199,105 @@
       "metadata": {
         "id": "q3jaj-aqh08G"
       },
-      "execution_count": 13,
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# web2.html 파일을 텍스트 읽기 모드로 오픈\n",
+        "with open(file=web2_html) as f:\n",
+        "    # BeautifulSoup 객체 생성\n",
+        "    bs = BeautifulSoup(markup=f, features='html5lib')\n",
+        "\n",
+        "    # div 태그 중에서 class 속성 값이 c1인 첫번째 요소 찾기\n",
+        "    element = bs.find(name='div', attrs={'class': 'c1'})\n",
+        "    print(element)\n",
+        "    print('-' * 50)\n",
+        "\n",
+        "    # div 태그 중에서 class 속성 값이 c2인 모든 요소 찾기\n",
+        "    elements = bs.find_all(name='div', attrs={'class': 'c2'})\n",
+        "    for x in elements:\n",
+        "        print(x.text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2ihrA30UMCDL",
+        "outputId": "31e97c5f-629d-4fe2-b779-d3d690df9e2d"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<div class=\"c1\">여기는 c1 클래스입니다.</div>\n",
+            "--------------------------------------------------\n",
+            "여기는 c2 클래스입니다.\n",
+            "여기는 c2 클래스, 아이디는 id1입니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "HTML 요소(element)를 찾는 방법(CSS Selector):\n",
+        "*   `tag_name`\n",
+        "*   `.class_name`\n",
+        "*   `#id`\n",
+        "*   `parent > child`\n",
+        "*   `ancestor descendent`\n",
+        "*   `selector1, selector2, ...`\n",
+        "*   `selector:pseudo-selector`"
+      ],
+      "metadata": {
+        "id": "aboRZaYDOyHR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(file=web2_html) as f:\n",
+        "    bs = BeautifulSoup(markup=f, features='html5lib')\n",
+        "    # tag 이름은 a이고, class 속성값이 menu_link인 모든 요소 찾기\n",
+        "    # elements = bs.find_all(name='a', attrs={'class': 'menu_link'})\n",
+        "    elements = bs.select(selector='a.menu_link')\n",
+        "    # print(elements)\n",
+        "\n",
+        "    for x in elements:\n",
+        "        # print(x)\n",
+        "        print(x.text, x.get('href'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k-weAPsEQtlg",
+        "outputId": "c09cafac-5ff4-4548-e6f8-8dfbec30586c"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "네이버 https://www.naver.com\n",
+            "다음 https://www.daum.net\n",
+            "구글 https://www.google.com\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KZyEm1lERkA-"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
