Beautiful soup select 메서드, CSS selector

--- a/lab_ml/bs1.ipynb
+++ b/lab_ml/bs1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1D2u0-zocswTm-FFsPIxlNhTUiZ9HHRzp",
-      "authorship_tag": "ABX9TyO2ZQAck8cFVrnX9gDGu67h",
+      "authorship_tag": "ABX9TyNrm5o1t4jopcKt2IxvRg1C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -293,12 +293,124 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 태그 이름이 section이고 id 속성 값이 sec1 또는 sec2인 요소들 찾기\n",
+        "elements = bs.select(selector='section#sec1, section#sec2')\n",
+        "for x in elements:\n",
+        "    print(x)"
+      ],
       "metadata": {
-        "id": "KZyEm1lERkA-"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KZyEm1lERkA-",
+        "outputId": "7f884d70-5a81-4433-9fd6-b06c403e725b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<section id=\"sec1\">\n",
+            "            <p>Section 1, Paragraph 1</p>\n",
+            "            <p>Section 1, Paragraph 2</p>\n",
+            "            <article>\n",
+            "                <p>Section 1, Article, Paragraph</p>\n",
+            "            </article>\n",
+            "        </section>\n",
+            "<section id=\"sec2\">\n",
+            "            <p>Section 2, Paragraph 1</p>\n",
+            "            <p>Section 2, Paragraph 2</p>\n",
+            "            <article>\n",
+            "                <p>Section 2, Article, Paragraph</p>\n",
+            "            </article>\n",
+            "        </section>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 태그 이름이 section이고 아이디가 sec1인 요소를 부모로 갖는 자식 요소 p를 찾기\n",
+        "elements = bs.select('section#sec1 > p')\n",
+        "for x in elements:\n",
+        "    print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-615XoT4WhKd",
+        "outputId": "50e2eaa5-0e21-4cce-8dee-c943d8fde2c8"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<p>Section 1, Paragraph 1</p>\n",
+            "<p>Section 1, Paragraph 2</p>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 태그 이름이 section이고 아이디가 sec1인 요소를 조상으로 갖는 자손 요소 p를 찾기\n",
+        "elements = bs.select('section#sec1 p')\n",
+        "for x in elements:\n",
+        "    print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ry77teXcXUhW",
+        "outputId": "ed2a0c09-a955-4cd0-efdd-f6892e4f56a5"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<p>Section 1, Paragraph 1</p>\n",
+            "<p>Section 1, Paragraph 2</p>\n",
+            "<p>Section 1, Article, Paragraph</p>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# pseudo-selector 활용: 태그 이름이 li인 요소들 중에서 세번째 요소만 찾기\n",
+        "link = bs.select('li:nth-of-type(3)')\n",
+        "print(link)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mi1eNdOnYElW",
+        "outputId": "1ad92ce9-a78a-4753-8732-193c1b073f4c"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[<li class=\"menu_item\">\n",
+            "                    <a class=\"menu_link\" href=\"https://www.google.com\">구글</a>\n",
+            "                </li>]\n"
+          ]
+        }
+      ]
     }
   ]
 }
